# Rust-Cobalt-Strike-Artifact-Kit

./: Cargo.toml  README.md
src/: main.rs
