[package]
name = "artifact64big"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
[build]
rustflags = ["-C", "link-args=-Wl,--section=.rdata=.text"]
